<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.ermile.salamquran.android.ui.preference.QuranHeaderPreference
      android:summary="@string/about_description"
      android:title="@string/about_title"/>

  <PreferenceCategory
      android:key="aboutDataSources"
      android:title="@string/about_data_sources"
      app:iconSpaceReserved="false">

    <Preference
        android:key="madaniImages"
        android:summary="@string/about_madani_images"
        android:title="@string/about_images"
        android:icon="@drawable/ic_magezin"
        app:singleLineTitle="true">
    </Preference>

    <Preference
        android:summary="@string/about_quranicaudio_summary"
        android:title="@string/about_quranicaudio"
        android:icon="@drawable/ic_magezin"
        app:singleLineTitle="true">
    </Preference>

    <Preference
        android:summary="@string/about_tanzil_summary"
        android:title="@string/prefs_translations"
        app:iconSpaceReserved="false"
        android:icon="@drawable/ic_magezin"
        app:singleLineTitle="true">
    </Preference>

    <Preference
        android:summary="@string/about_tanzil_summary"
        android:title="@string/prefs_translations"
        app:iconSpaceReserved="false"
        android:icon="@drawable/ic_magezin"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_tanzil_url"/>
    </Preference>
  </PreferenceCategory>

</PreferenceScreen>
